POI Controller SRP fix